--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             </div>
         </div>
     </div>
+    <script>
+        alert('You are invited')
+    </script>
     <audio class="song" controls="controls" loop="">
         <source src="Happy%20Birthday_files/music.mp3">
         
